--- a/Source/lib/zxing.net4.5.csproj
+++ b/Source/lib/zxing.net4.5.csproj
@@ -339,7 +339,7 @@
     <Compile Include="ResultPointCallback.cs" />
     <Compile Include="RGBLuminanceSource.cs" />
     <Compile Include="SupportClass.cs" />
-    <Compile Include="Writer.cs" />
+    <Compile Include="IWriter.cs" />
     <Compile Include="WriterException.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -351,6 +351,9 @@
   <PropertyGroup Condition="!Exists('$(MSBuildProjectDirectory)\..\..\Key\private.snk')">
     <PreBuildEvent Condition=" '$(OS)' == 'Unix' ">cp "$(MSBuildProjectDirectory)\..\..\Key\dummy-private.snk" "$(MSBuildProjectDirectory)\..\..\Key\private.snk"</PreBuildEvent>
     <PreBuildEvent Condition=" '$(OS)' != 'Unix' ">copy "$(MSBuildProjectDirectory)\..\..\Key\dummy-private.snk" "$(MSBuildProjectDirectory)\..\..\Key\private.snk"</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent />
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
